passing values from one html to the other done

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
     <footer>
      <h3> Developed with &#10084; by <a href="">Cadavinci.com</a></h3>
     </footer>
+    <script>
+      var p1 = document.getElementById("p1b")
+      var p1Name=localStorage.getItem(1);
+      p1.innerHTML = p1Name;
+      
+      var p2 = document.getElementById("p2b")
+      var p2Name=localStorage.getItem(2);
+      p2.innerHTML = p2Name;
+  </script>  
     <script src="logic.js"></script>
   </body>
 </html>
