--- a/index.html
+++ b/index.html
@@ -5,64 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="menuStyle.css" />
-    <title>Document</title>
+    <title>Topspin keeper</title>
   </head>
   <body>
     <header>Tennis score kepper</header>
     <main>
       <section class="gameSetup">
-        <!-- GAMES -->
+        <!-- PLAYER NAMES -->
         <div class="setting_container">
-          <div id="game_buttons">
-            <div>
-              <label for="8">8</label>
-              <input id="8" type="radio" name="games" value="8" />
-            </div>
-            <div>
-              <label for="6">6</label>
-              <input id="6" type="radio" name="games" value="6" />
-            </div>
-            <div>
-              <label for="4">4</label>
-              <input id="4" type="radio" name="games" value="4" />
-            </div>
+          <div class="player_names">
+            <label for="name" style="text-align: center;">Player 1</label>
+            <input id="p1n" type="text" value="" name="name" />
+          </div>
+          <div class="player_names">
+            <label for="name" style="text-align: center;">Player 2</label>
+            <input id="p2n" type="text" value="" name="name" />
           </div>
         </div>
+        <!-- SETS -->
+        <h2>Sets per match</h2>
         <div class="setting_container">
-          <!-- SETS -->
           <div id="sets_buttons">
             <div>
-              <label for="5">5</label>
-              <input id="5" type="radio" name="sets" value="5" />
+              <label for="1">1</label>
+              <input id="1" type="radio" name="sets" value="1" />
             </div>
             <div>
               <label for="3">3</label>
               <input id="3" type="radio" name="sets" value="3" />
             </div>
             <div>
-              <label for="1">1</label>
-              <input id="1" type="radio" name="sets" value="1" />
+              <label for="5">5</label>
+              <input id="5" type="radio" name="sets" value="5" />
             </div>
           </div>
         </div>
-        <!-- PLAYER NAMES -->
+        <!-- GAMES -->
+        <h2>Games per set</h2>
         <div class="setting_container">
-          <div class="player_names">
-            <label for="name">Player 1</label>
-            <input id="p1n" type="text" value="" name="name" />
-          </div>
-          <div class="player_names">
-            <label for="name">Player 2</label>
-            <input id="p2n" type="text" value="" name="name" />
+          <div id="game_buttons">
+            <div>
+              <label for="4">4</label>
+              <input id="4" type="radio" name="games" value="4" />
+            </div>
+            <div>
+              <label for="6">6</label>
+              <input id="6" type="radio" name="games" value="6" />
+            </div>
+            <div>
+              <label for="8">8</label>
+              <input id="8" type="radio" name="games" value="8" />
+            </div>
+         
           </div>
         </div>
-        <div class="start setting_container">
+
+        <div class="start setting_container" style="background-color: transparent;">
           <button><a href="app.html" onclick="getValue()">Start</a></button>
         </div>
       </section>
     </main>
     <footer>
-      <h3>Developed with &#10084; by <a href="">Cadavinci.com</a></h3>
+      <h3>
+        Developed with &#10084; by
+        <a href="https://cadavinci.com" target="_blank">Cadavinci.com</a>
+      </h3>
     </footer>
     <script>
       function getValue() {
