--- a/app.html
+++ b/app.html
@@ -43,7 +43,7 @@
       </section>
     </main>
     <footer>
-     <h3> Developed with &#10084; by <a href="">Cadavinci.com</a></h3>
+      <h3>Developed with &#10084; by <a href="https://cadavinci.com" target="_blank">Cadavinci.com</a></h3>
     </footer>
     <script>
       var p1 = document.getElementById("p1b")
