css grid missing

--- a/app.html
+++ b/app.html
@@ -21,8 +21,8 @@
         <button id="p2b">player2</button>
        </section>
        <section class="buttons__points_redo">
-        <button id="r1b">redo1</button>
-        <button id="r2b">redo2</button>
+        <button id="r1b"><span style='font-size:30px; color:rgb(253, 253, 253)'>&#8635;</span></button>
+        <button id="r2b"><span style='font-size:30px; color:rgb(253, 253, 253)'>&#8635;</span></button>
        </section>
        
       </section>
