--- a/app.html
+++ b/app.html
@@ -52,9 +52,11 @@
       var p2Name=localStorage.getItem(2);
       p2.innerHTML = p2Name;
 
-      var games;
+      var games = localStorage.getItem(3);
 
-      var sets;
+      var sets = localStorage.getItem(4);
+
+      alert("games" + games +"\n" + "sets:" +sets)
   </script>  
     <script src="logic.js"></script>
   </body>
