--- a/app.html
+++ b/app.html
@@ -17,8 +17,8 @@
       </section>
       <section class="buttons">
        <section class="buttons__points">
-        <button id="p1b">Player1</button>
-        <button id="p2b">player2</button>
+        <button id="p1b"></button>
+        <button id="p2b"></button>
        </section>
        <section class="buttons__points_redo">
         <button id="r1b"><span style='font-size:30px; color:rgb(253, 253, 253)'>&#8635;</span></button>
@@ -28,13 +28,13 @@
       </section>
       <section class="scoreGrid">
          <section class="grid">
-           <div id="player1">Cadavid</div>
+           <div id="player1">P1</div>
            <div id="player1__game">0</div>
            <div id="player1__game">0</div>
            <div id="player1__game">0</div>
            <div id="player1__game">0</div>
           
-           <div id="player2">Elotro</div>
+           <div id="player2">P2</div>
            <div id="player2__game">0</div>
            <div id="player2__game">0</div>
            <div id="player2__game">0</div>
@@ -61,3 +61,4 @@
     <script src="logic.js"></script>
   </body>
 </html>
+
