dynamic adding missing

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <div class="setting_container">
           <div class="player_names">
             <label for="name" style="text-align: center">Player 1</label>
-            <input id="p1n" type="text" value="" name="name" />
+            <input id="p1n" type="text" value="" name="name"  maxlength="9" />
           </div>
           <div class="player_names">
             <label for="name" style="text-align: center">Player 2</label>
-            <input id="p2n" type="text" value="" name="name" />
+            <input id="p2n" type="text" value="" name="name" maxlength="9" />
           </div>
         </div>
         <!-- SETS -->
