--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <footer>
       <h3>
         Developed with &#10084; by
-        <a href="https://cadavinci.com" target="_blank">Cadavinci.com</a>
+        <a style="text-decoration:none;color:white" href="https://cadavinci.com" target="_blank">Cadavinci.com</a>
       </h3>
     </footer>
     <script>
