--- a/app.html
+++ b/app.html
@@ -58,6 +58,9 @@
 
       var sets = localStorage.getItem(4);
 
+      //creates the amount of fields
+      //for the sets, for player 1
+      //also gives them an id for further referenciation
       for (var i = 0;i<sets;i++){
         var para = document.createElement("P");
         para.id = "p1s"+i;
@@ -65,6 +68,9 @@
         document.getElementById("grid1").appendChild(para);
        }
 
+        //creates the amount of fields
+      //for the sets, for player 2
+      //also gives them an id for further referenciation
        for (var i = 0;i<sets;i++){
         var para = document.createElement("P");
         para.id = "p2s"+i;
