--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <h2>Player names</h2>
         <div class="setting_container">
           <div class="player_names">
-            <input id="p1n" type="text" value="" name="name"  maxlength="9" placeholder="Player 1 name" />
+            <input id="p1n" type="text" value="" name="name"  maxlength="9" placeholder="Player 1 name" required/>
           </div>
           <div class="player_names">
-            <input id="p2n" type="text" value="" name="name" maxlength="9" placeholder="Player 2 name" />
+            <input id="p2n" type="text" value="" name="name" maxlength="9" placeholder="Player 2 name" required />
           </div>
         </div>
         <!-- SETS -->
