--- a/app.html
+++ b/app.html
@@ -41,6 +41,7 @@
       <section class="buttons">
        <section class="buttons__points">
         <button id="p1b">P1</button>
+        <button id="home"><a href="index.html" style="margin-top:15px;color: white;text-decoration:none">Back Home</a></button>
         <button id="p2b">P2</button>
        </section>
        <section class="buttons__points_redo">
