--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="myModal" class="modal">
           <!-- Modal content -->
           <div class="modal-content">
+            <h2>Settings</h2>
             <h2 id="settingP1"></h2>
             <h2 id="settingP2"></h2>
             <h2 id="settingSets"></h2>
